# Unify_is_Impossible

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/controller/: audio_player.cpp  audio_player.h  video_player.cpp  video_player.h  wav_player.cpp  wav_player.h
src/module/: audio_manager.cpp  audio_manager.h  event_manager.cpp  event_manager.h  log.cpp  log.h  manager_interface.cpp  manager_interface.h  system_manager.cpp  system_manager.h  widget.cpp  widget.h  windows_manager.cpp  windows_manager.h
src/module/driver/: timer_utils.cpp  timer_utils.h
src/module/driver/linux-common/: gpio.c  raspberrypi4b_driver_mfrc522_interface.c  raspberrypi4b_driver_mifare_classic_interface.c  wire.c
src/module/driver/render/: SDL_renderer.cpp  SDL_renderer.h  renderer.cpp  renderer.h
src/module/events/: event_system.cpp  event_system.h  event_timer.cpp  event_timer.h
src/module/resource/: SDL_Event.cpp  SDL_Event.h  SDL_Font.cpp  SDL_Font.h  SDL_View.cpp  SDL_View.h  SDL_Widget.cpp  SDL_Widget.h  SDL_Windows.cpp  SDL_Windows.h
src/module/resource/audio/: audio_controller.cpp  audio_controller.h
src/module/resource/font/: font.cpp  font.h  label.cpp  label.h
src/module/resource/video/: ff_video_controller.cpp  ff_video_controller.h
src/module/resource/view/: view_draw.cpp  view_draw.h
src/module/signal/: signal_system.cpp  signal_system.h
src/module/task/: thread_pool.cpp  thread_pool.h
src/module/template/: instance.h  temp_cstr.h
src/module/types/: callback_helper.h  color_helper.cpp  color_helper.h  point_helper.cpp  point_helper.h  vertex_helper.cpp  vertex_helper.h
src/module/types/NDEF/: Ndef.h  NdefMessage.cpp  NdefMessage.h  NdefRecord.cpp  NdefRecord.h  NfcAdapter.cpp  NfcAdapter.h  NfcTag.cpp  NfcTag.h
src/module/utils/: timer_feedback.cpp  timer_feedback.h
src/view/layout/: normal_flow.cpp  normal_flow.h
src/view/style/: style.cpp  style.h
src/view/widget/: SDL_Image.cpp  SDL_Image.h  SDL_label.cpp  SDL_label.h  SDL_plane.cpp  SDL_plane.h
test/: CMakeLists.txt
test/ui-example/: hello_world.cpp
